tooling/nargo_cli/tests/snapshots/execution_failure/unused_array_get_unknown_index_out_of_bounds/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Indexing arrays and vectors must be done with `u32`, not `Field`
  ┌─ src/main.nr:3:19
  │
3 │     let _ = array[x]; // Index out of bounds
  │                   -
  │

Aborting due to 1 previous error
