tooling/nargo_cli/tests/snapshots/execution_failure/unused_array_get_unknown_index_out_of_bounds/execute__tests__unused_array_get_unknown_index_out_of_bounds_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: Indexing an array or slice with a type other than `u32` is deprecated and will soon be an error
  ┌─ src/main.nr:3:19
  │
3 │     let _ = array[x]; // Index out of bounds
  │                   -
  │

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:2:24
  │
2 │     let array = [1, 2, 3];
  │                        -
  │
  = Call stack:
    1. src/main.nr:2:24

Failed assertion
